<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SogouGameSDK</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="partnerHint">"partner"</string>
    <string name="sellerHint">"seller"</string>
    <string name="out_trade_noHint">"out_trade_no"</string>
    <string name="subjectHint">"subject"</string>
    <string name="bodyHint">"body"</string>
    <string name="total_feeHint">"total_fee"</string>
    <string name="notify_urlHint">"notify_url"</string>
    <string name="charsetHint">"charset"</string>
    <string name="signTypeHint">"signType"</string>
    <string name="confirm_install_hint">"安装提示"</string>
    <string name="confirm_install">"为保证您的交易安全，需要您安装支付宝安全支付服务，才能进行付款。\n\n点击确定，立即安装。"</string>
    <string name="Ensure">"确定"</string>
    <string name="Cancel">"取消"</string>
    <string name="check_sign_failed">您的订单信息已被非法篡改。</string>    
    <string name="sogou_reg_title_main">用户名注册</string>
    <string name="sogou_reg_title_express">快速注册</string>
    <string name="sogou_reg_tab_express">自动注册</string>
    <string name="sogou_reg_username_text">4-16个字符，字母开头</string>
    <string name="sogou_reg_passpword_text">4-16个字符，区分大小写</string>
    <string name="sogou_reg_passpword_confirm_text">确认密码</string>
    <string name="sogou_reg_express_body_info">为您自动生成搜狗账号\n同一个设备下生成账号永远相同，不怕丢失。</string>
    <string name="sogou_reg_agree">阅读并同意</string>
    <string name="sogou_reg_protocol">搜狐服务协议</string>
    <string name="sogou_reg_show_pwd_label">显示密码</string>

    <!-- head title part -->
    <string name="sogou_title_game">搜狗游戏</string>
    <string name="sogou_title_pay_select">充值中心</string>
    <string name="sogou_title_regist">注册账号</string>
    <string name="sogou_title_alipay">支付宝充值</string>
    <string name="sogou_title_ali_wap_pay">网银充值</string>
    <string name="sogou_title_ali_wap_pay_credit_card">网银充值-信用卡</string>
    <string name="sogou_title_ali_wap_pay_deposit_card">网银充值-储蓄卡</string>
    <string name="sogou_title_messagepay">话费充值</string>
    <string name="sogou_title_chinauincompay">联通充值卡充值</string>
    <string name="sogou_title_chinamobilepay">移动充值卡充值</string>
    <string name="sogou_title_chinatelecompay">电信充值卡充值</string>
    <string name="sogou_title_third_login_qq">QQ登录</string>
    <string name="sogou_title_third_login_sina">新浪微博登录</string>
    <string name="sogou_title_third_login_renren">人人登录</string>
    <string name="sogou_regist_agree">搜狗服务协议</string>
    <string name="sogou_login_text">"登录"</string>
    <string name="reg_text">"5秒注册"</string>
    <string name="agree"><u>同意《搜狗服务使用协议》</u></string>
    <string name="all_pay_confirm">确认充值</string>

    <!-- login -->
    <string name="login_tips">搜狐和chinaren账号可直接登录</string>
    <string name="input_user_name_label">请输入用户名</string>
    <string name="input_passwd_label">请输入密码</string>
    <string name="auto_login_label">自动登录</string>
    <string name="forgot_password_label">勾选记住密码</string>
    <string name="login_btn_label">登录</string>
    <string name="reg_btn_label">注册</string>
    <string name="other_login_btn_label">其他账号登录</string>
    <string name="login_btn_feedback">玩家交流反馈群：328745336</string>
    <string name="login_express_label">您正在使用快注账号\n[%1$s]进行游戏,\n请完善账号或直接登录游戏。</string>
    <string name="login_express_account_perfect">完善账号</string>
    <string name="login_express_account_perfect_label">亲，您现在是快速注册用户，一旦账号丢失无法找回，请火速完善您的账号。</string>
	<string name="login_express_account_perfect_ok">确认完善</string>
	<string name="login_express_account_perfect_cancel">我不怕丢号</string>	
	<string name="sogou_login_notice_label">温馨提示:如果您曾经使用过自动注册建立过账号,请【点击这里】登录游戏。</string>
	<string name="sogou_game_sdk_login_tips">登录中&#8230;</string>
	<string name="sogou_game_sdk_regist_tips">注册中&#8230;</string>
	<string name="sougou_game_sdk_suc_regist">恭喜你，注册成功！</string>
    
    <!-- ali pay -->
    <string name="ali_pay_yuan">元</string>
    <string name="ali_pay_10">10元</string>
    <string name="ali_pay_30">30元</string>
    <string name="ali_pay_50">50元</string>
    <string name="ali_pay_100">100元</string>
    <string name="ali_pay_200">200元</string>
    <string name="ali_pay_300">300元</string>
    <string name="ali_pay_500">500元</string>
    <string name="ali_pay_1000">1000元</string>
    <string name="ali_pay_2000">2000元</string>
    <string name="ali_pay_other_amount">请输入其他金额</string>

    <!-- card pay -->
    <string name="card_pay_amount">金额</string>
    <string name="card_pay_select_amount">选择金额</string>
    <string name="card_pay_number_label">卡号</string>
    <string name="card_pay_number">请输入卡号</string>
    <string name="card_pay_password_label">密码</string>
    <string name="card_pay_password">请输入密码</string>

    <!-- pay info -->
    <string name="pay_info_account">充值账号：</string>
    <string name="pay_info_game">充值游戏：</string>
    <string name="pay_info_goods">商品名称：</string>
    <string name="pay_info_amount">请选择充值金额</string>
    <string name="pay_info_input_amount">请输入充值金额</string>
    <string name="pay_info_express_account">快注账号：%1$s</string>

    <!-- message pay -->

    <string name="mssage_pay_tips">充值金额将自动从您话费中扣除</string>
    <string name="mssage_pay_amount">金    额</string>
    <string name="mssage_pay_input_amount">请输入金额！</string>
    <string name="mssage_pay_code">校验码</string>
    <string name="mssage_pay_send_code">发送手机验证码</string>
    <string name="mssage_pay_input_code">请输入短信校验码</string>

    <!-- reg user -->
    <string name="reg_page_username_tips">4-16个字符，字母开头</string>
    <string name="reg_page_password_tips">6-16个字符，区分大小写</string>
    <string name="reg_page_captcha">输入验证码，点击图片刷新</string>
    <string name="reg_page_reg_btn">立即注册</string>
    <string name="reg_page_img_tips"></string>

    <!-- select pay -->
    <string name="select_pay_account">充值账号：xxxxxxx@sogou.com</string>
    <string name="select_pay_method">选择充值方式：</string>
    <string name="select_pay_alipay">支付宝</string>
    <string name="select_pay_telcom">电信充值卡</string>
    <string name="select_pay_unicom">联通充值卡</string>
    <string name="select_pay_mobile">移动充值卡</string>
    <string name="select_pay_message">话费充值</string>
    <string name="select_pay_aliwap">网银充值</string>

    <!-- third login -->
    <string name="third_login_loading">数据加载中...</string>

    <!-- ali wap bank -->
    <string name="credit_card_pay">信用卡支付</string>
    <string name="bank_card_pay">储蓄卡支付</string>
    <string name="title_activity_feed_back">FeedBackActivity</string>

    <!-- feedback -->
    <string name="action_settings">Settings</string>
    <string name="sogou_feed_back_contact_label">联系方式:</string>
    <string name="feed_back_input_hint">请输入QQ或手机号</string>
    <string name="feed_back_issues_label_text">问题描述:</string>
    <string name="sogou_feed_back_submitBtn_label">提交</string>
    <string name="sogou_feed_back_info_string">温馨提示:为了安全请不要在提问中泄露账号密码等信息,我们将尽快给您回复</string>

    <!-- pay record -->
    <string name="pay_record_title">充值记录</string>
    <string name="title_activity_sogou_feed_back_record">SogouFeedBackRecordActivity</string>
    <string name="sogou_feed_back_recordBtn_label">反馈记录</string>
    <string name="sogou_feed_back_record_title">反馈记录</string>
    <string name="sogou_feed_back_record_count_text">反馈共计0条</string>
    <string name="sogou_feed_backBtn_label">问题反馈</string>
    <string name="pay_record_btn_label">充值记录</string>
    <string name="sogou_select_pay_feedBack_label_text">如有任何问题请点击问题&lt;font color=\"#FF0000\" >反馈&lt;/font></string>
    <string name="sogou_pay_record_success_text">成功</string>
    <string name="sogou_pay_record_fail_text">失败</string>
    <string name="sogou_pay_record_solving_string">处理中</string>
    <string name="sogou_pay_record_account_label_string">账号:</string>
    <string name="sogou_feed_back_record_friendlyInfo_text">友情提示:记录只显示最新提交的10条</string>
    <string name="sogou_feed_back_record_item_issues_label_text">问题：</string>
    <string name="sogou_feed_back_record_item_feed_content_text">反馈：</string>
    <string name="sogou_pay_record_line_descrip">line</string>
    <string name="sogou_pay_record_norecord_text">该分类暂无记录</string>
    <string name="sogou_pay_cancel">取消支付</string>

</resources>