<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_background_color"
    android:orientation="vertical"
    android:scrollbars="none" >

    <include layout="@layout/sogou_head" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/white_background"
        android:orientation="horizontal"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:scrollbars="none" >

        <TextView
            android:id="@+id/sogou_pay_record_success_label"
            style="@style/list_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sogou_pay_record_success_text" />
        
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sogou_pay_record_line_descrip"
            android:src="@drawable/black_line" />
        
        <TextView
            android:id="@+id/sogou_pay_record_solveFail_label"
            style="@style/list_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sogou_pay_record_fail_text" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sogou_pay_record_line_descrip"
            android:src="@drawable/black_line" />
        
        <TextView
            android:id="@+id/sogou_pay_record_solving_label"
            style="@style/list_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sogou_pay_record_solving_string" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/sogou_pay_record_account_label"
            style="@style/list_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/sogou_pay_record_account_label_string" />
        
        <TextView
            android:id="@+id/sogou_pay_record_norecord_label"
            style="@style/list_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/sogou_pay_record_norecord_text" />

    </LinearLayout>

    <ListView
        android:id="@+id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/main_background_color"
        android:divider="@color/main_background_color"
        android:cacheColorHint="#00000000"
        android:choiceMode="none"
        android:dividerHeight="10dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollingCache="true" />

</LinearLayout>